turtleart.disktwo.DiskTwo.scala.error
Compilation error:
DiskTwo:7: error: not found: value droite1
    droite1
    ^