turtleart.disktwo.DiskTwo.scala.code
override def run() {
  for (i <- 0 to 8;j <- 0 to 39){
    setCouleur(Color.black)
    if (j>9){setCouleur(Color.red)}
    avance(100)
    recule(100)
    droite1
  }
}